--- a/locale/fr.json
+++ b/locale/fr.json
@@ -1,7 +1,9 @@
 {
+ "P_I18N_BTN_COPY_FILE":"Copier fichier",
  "P_I18N_BTN_CREATE_FILE":"Créer un fichier",
  "P_I18N_BTN_LOAD_FILE":"Charger fichier",
  "P_I18N_BTN_UPD_FILE":"Modifier la traduction",
+ "P_I18N_COPY_TO":"vers",
  "P_I18N_KEY_CODE_NB_KEY":"Leed ($1 Tags)",
  "P_I18N_KEY_FILE_NB_KEY":"Fichier Langue ($1 Tags)",
  "P_I18N_KEY_INFILE_NOTFND_TITLE":"Clés absentes / obsolètes",
