plugin i18n v2.3.0 - Ajout fonction de changement de langue dans Leed. + ajout ordre de tri avant de sauvegarder

--- a/locale/en.json
+++ b/locale/en.json
@@ -1,4 +1,5 @@
 {
+ "P_I18N_BTN_CHG_LNG_LEED":"Change language on Leed",
  "P_I18N_BTN_COPY_FILE":"Copy file",
  "P_I18N_BTN_CREATE_FILE":"Create a file",
  "P_I18N_BTN_LOAD_FILE":"Load file",
@@ -11,12 +12,13 @@
  "P_I18N_MANAGE_LNG_TITLE":"Management language files Leed",
  "P_I18N_MESSAGES":"Message(s)",
  "P_I18N_MSG_ALERT":"The 'double quote' character is not authorized in the translations.",
+ "P_I18N_MSG_CHG_LNG_LEED":"Language change successful, refresh the page to confirm the inclusion",
  "P_I18N_MSG_NOT_FND_CODE":"(not found in the code)",
  "P_I18N_NEW_LNG_FILE_EXIST":"File already exists",
  "P_I18N_NEW_LNG_FILE_OK":"Creating the language file $1 : OK",
  "P_I18N_PREF_TITLE":"Translation Plugin Leed",
  "P_I18N_UPD_FILE_TITLE":"Modification of file : $1",
- "P_I18N_UPD_LNG_FILE_ERR":"The file $1 is not writable. Please add the necessary rights and click refresh to restart the operation",
+ "P_I18N_UPD_LNG_FILE_ERR":"The file $1 is not writable.<br />Please add the necessary rights and click refresh to restart the operation",
  "P_I18N_UPD_LNG_FILE_OK":"Language file: $1 updated.",
  "P_I18N_VERIF_ERR1":"Can't write to the specified directory, please add write permissions on the folder.",
  "P_I18N_VERIF_ERR2":"The required function 'file_get_contents' is inaccessible on your server, check your version of PHP.",
