[i18n plugin] Updating translations
* Added a new spanish translation
* Orthograph correction in french translation

--- a/locale/fr.json
+++ b/locale/fr.json
@@ -9,16 +9,16 @@
  "P_I18N_KEY_FILE_NB_KEY":"Fichier Langue ($1 Tags)",
  "P_I18N_KEY_INFILE_NOTFND_TITLE":"Clés absentes / obsolètes",
  "P_I18N_KEY_INFILE_TITLE":"Clés présentes",
- "P_I18N_MANAGE_LNG_TITLE":"Gestion  des fichiers de langue de Leed",
+ "P_I18N_MANAGE_LNG_TITLE":"Gestion des fichiers de langue de Leed",
  "P_I18N_MESSAGES":"Message(s)",
  "P_I18N_MSG_ALERT":"Le caractère 'double quote' n'est pas autorisé dans les traductions.",
- "P_I18N_MSG_CHG_LNG_LEED":"Changement de langue réussi, raffraichir la page pour confirmer la prise en compte",
+ "P_I18N_MSG_CHG_LNG_LEED":"Changement de langue réussi, rafraîchir la page pour confirmer la prise en compte",
  "P_I18N_MSG_NOT_FND_CODE":"(non trouvé dans le code)",
  "P_I18N_NEW_LNG_FILE_EXIST":"Fichier déjà existant ",
  "P_I18N_NEW_LNG_FILE_OK":"Création du fichier de langue $1 : OK",
  "P_I18N_PREF_TITLE":"Plugin de Traduction de Leed",
  "P_I18N_UPD_FILE_TITLE":"Modification du fichier : $1",
- "P_I18N_UPD_LNG_FILE_ERR":"Le fichier $1 n'est pas accessible en écriture.<br />Veuillez ajouter les droits nécessaires et cliquer sur rafraichir pour relancer l'opération",
+ "P_I18N_UPD_LNG_FILE_ERR":"Le fichier $1 n'est pas accessible en écriture.<br />Veuillez ajouter les droits nécessaires et cliquer sur rafraîchir pour relancer l'opération",
  "P_I18N_UPD_LNG_FILE_OK":"Fichier de langue : $1 mis à jour.",
  "P_I18N_VERIF_ERR1":"Écriture impossible dans le répertoire indiqué, veuillez ajouter les permissions en écriture sur le dossier.",
  "P_I18N_VERIF_ERR2":"La fonction requise 'file_get_contents' est inaccessible sur votre serveur, vérifiez votre version de PHP.",
