--- a/locale/es.json
+++ b/locale/es.json
@@ -17,6 +17,7 @@
  "P_I18N_NEW_LNG_FILE_EXIST":"El archivo ya existe ",
  "P_I18N_NEW_LNG_FILE_OK":"Creación del archivo de idioma $1 : OK",
  "P_I18N_PREF_TITLE":"Plugin de Traducción de Leed",
+ "P_I18N_TRANSLATE":"Traducir",
  "P_I18N_UPD_FILE_TITLE":"Modificación del archivo : $1",
  "P_I18N_UPD_LNG_FILE_ERR":"No se puede acceder al archivo $1 para escribir.<br />Por favor, agreguen los derechos necesarios y recarguen la página para intentar de nuevo.",
  "P_I18N_UPD_LNG_FILE_OK":"Archivo de idioma : $1 actualizado.",
