--- a/locale/fr.json
+++ b/locale/fr.json
@@ -17,6 +17,7 @@
  "P_I18N_NEW_LNG_FILE_EXIST":"Fichier déjà existant ",
  "P_I18N_NEW_LNG_FILE_OK":"Création du fichier de langue $1 : OK",
  "P_I18N_PREF_TITLE":"Plugin de Traduction de Leed",
+ "P_I18N_TRANSLATE":"Traduire",
  "P_I18N_UPD_FILE_TITLE":"Modification du fichier : $1",
  "P_I18N_UPD_LNG_FILE_ERR":"Le fichier $1 n'est pas accessible en écriture.<br />Veuillez ajouter les droits nécessaires et cliquer sur rafraîchir pour relancer l'opération",
  "P_I18N_UPD_LNG_FILE_OK":"Fichier de langue : $1 mis à jour.",
