--- a/locale/en.json
+++ b/locale/en.json
@@ -5,11 +5,14 @@
  "P_I18N_BTN_LOAD_FILE":"Load file",
  "P_I18N_BTN_UPD_FILE":"Edit translation",
  "P_I18N_COPY_TO":"to",
+ "P_I18N_CREA_FIC_LNG":"Creating a language file",
  "P_I18N_KEY_CODE_NB_KEY":"Leed ($1 Tags)",
  "P_I18N_KEY_FILE_NB_KEY":"Language file ($1 Tags)",
  "P_I18N_KEY_INFILE_NOTFND_TITLE":"Key missing / obsolete",
  "P_I18N_KEY_INFILE_TITLE":"Keys present",
  "P_I18N_MANAGE_LNG_TITLE":"Management language files Leed",
+ "P_I18N_MANAGE_PLUGIN_LNG":"File management plugins languages",
+ "P_I18N_MANAGE_TEMPLATE_LNG":"File management templates languages",
  "P_I18N_MESSAGES":"Message(s)",
  "P_I18N_MSG_ALERT":"The 'double quote' character is not authorized in the translations.",
  "P_I18N_MSG_CHG_LNG_LEED":"Language change successful, refresh the page to confirm the inclusion",
