--- a/locale/es.json
+++ b/locale/es.json
@@ -5,11 +5,14 @@
  "P_I18N_BTN_LOAD_FILE":"Cargar el archivo",
  "P_I18N_BTN_UPD_FILE":"Modificar la traducción",
  "P_I18N_COPY_TO":"hacia",
+ "P_I18N_CREA_FIC_LNG":"Creación de un archivo de idioma",
  "P_I18N_KEY_CODE_NB_KEY":"Leed ($1 Tags)",
  "P_I18N_KEY_FILE_NB_KEY":"Archivo de idioma ($1 Tags)",
  "P_I18N_KEY_INFILE_NOTFND_TITLE":"Llaves ausentes / obsoletas",
  "P_I18N_KEY_INFILE_TITLE":"Llaves presentes",
  "P_I18N_MANAGE_LNG_TITLE":"Administración de los archivos de idioma de Leed",
+ "P_I18N_MANAGE_PLUGIN_LNG":"Archivos de idioma plugins Gestión",
+ "P_I18N_MANAGE_TEMPLATE_LNG":"Archivos de idioma temas Gestión",
  "P_I18N_MESSAGES":"Mensaje(s)",
  "P_I18N_MSG_ALERT":"No se puede utilizar el carácter 'double quote' en las traducciones",
  "P_I18N_MSG_CHG_LNG_LEED":"Cambio de idioma exitoso, recarga la página para tomarlo en cuenta",
