--- a/locale/fr.json
+++ b/locale/fr.json
@@ -5,11 +5,14 @@
  "P_I18N_BTN_LOAD_FILE":"Charger fichier",
  "P_I18N_BTN_UPD_FILE":"Modifier la traduction",
  "P_I18N_COPY_TO":"vers",
+ "P_I18N_CREA_FIC_LNG":"Création d'un fichier de langue",
  "P_I18N_KEY_CODE_NB_KEY":"Leed ($1 Tags)",
  "P_I18N_KEY_FILE_NB_KEY":"Fichier Langue ($1 Tags)",
  "P_I18N_KEY_INFILE_NOTFND_TITLE":"Clés absentes / obsolètes",
  "P_I18N_KEY_INFILE_TITLE":"Clés présentes",
  "P_I18N_MANAGE_LNG_TITLE":"Gestion des fichiers de langue de Leed",
+ "P_I18N_MANAGE_PLUGIN_LNG":"Gestion des fichiers de langues des plugins",
+ "P_I18N_MANAGE_TEMPLATE_LNG":"Gestion des fichiers de langues des thèmes",
  "P_I18N_MESSAGES":"Message(s)",
  "P_I18N_MSG_ALERT":"Le caractère 'double quote' n'est pas autorisé dans les traductions.",
  "P_I18N_MSG_CHG_LNG_LEED":"Changement de langue réussi, rafraîchir la page pour confirmer la prise en compte",
